--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,38 @@
+#-----------cutsom ignore files----------
+cred_user_pwd_keys.py
+cred_user_pwd_keys.txt
+
+
+#----------------------------------------------------------------------
+#------------------Golang Basic Gitignore------------------------------
+#----------------------------------------------------------------------
+ 
+ If you prefer the allow list template instead of the deny list, see community template:
+# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
+#
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+
+# Go workspace file
+go.work
+
+#----------------------------------------------------------------------
+#------------------Python Basic Gitignore------------------------------
+#----------------------------------------------------------------------
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
